--- a/index.html
+++ b/index.html
@@ -4,47 +4,37 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Login</title>
+	<title>Home</title>
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/login.css">
+  <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-<div class="login-form col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-	<header>
-		<h1><img class="img-responsive" src="img/watchguru.png" title="watchguru"></h1>
-		<h2 class="text-center">Entre com o seu <b>usuário</b> e <b>senha</b></h2>
-	</header>
+  <nav class="navbar navbar-inverse navbar-static-top">
+    <div class="container">
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          <a href="#" class="navbar-brand logotipo">
+            <img src="img/watchguru.png" align="Watch Guru">
+          </a>
+      </div>
+      <div class="collapse navbar-collapse" id="menu">
+        <ul class="nav navbar-nav">
+           <li><a href="">Ordens de Serviço</a></li>
+            <li><a href="">Clientes</a></li>
+            <li><a href="">Funcionários</a></li>
+            <li><a href="">Serviços</a></li>
+        </ul>
+      </div>
+    </div>  
+  </nav>
+	
 
-	<form>
-		<div class="form-group">
-			<div class="input-group">
-				<div class="input-group-addon">
-					<span class="glyphicon glyphicon-user"></span>
-				</div>
-				<input type="text" name="usuario" class="form-control" placeholder="Usuário">
-			</div>
-		</div>
-
-		<div class="form-group">
-			<div class="input-group">
-				<div class="input-group-addon">
-					<span class="glyphicon glyphicon-option-horizontal"></span>
-				</div>
-				<input type="password" name="senha" class="form-control" placeholder="Senha">
-			</div>
-		</div>
-
-		<footer>
-			<div class="checkbox pull-left">
-				<label><input type="checkbox" name="lembrar">Lembrar de mim</label>
-			</div>
-			<button type="submit" class="btn btn-primary pull-right">Entrar</button>
-		</footer>
-	</form>
-</div>
-
-	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
