--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a href="#" class="navbar-brand logotipo">
-            <img src="img/watchguru.png" align="Watch Guru">
+          <a href="index.html" class="navbar-brand logotipo">
+            <img src="img/watchguru.png" alt="Watch Guru">
           </a>
       </div>
+
       <div class="collapse navbar-collapse" id="menu">
         <ul class="nav navbar-nav">
            <li><a href="">Ordens de Serviço</a></li>
@@ -29,12 +30,27 @@
             <li><a href="">Funcionários</a></li>
             <li><a href="">Serviços</a></li>
         </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Minha Conta
+              <span class="caret"></span>
+            </a>
+            <div class="dropdown-menu perfil">
+              <ul class="list-unstyled">
+                <li>Fulano de Tal</li>
+                <li><a href="">Alterar Perfil</a></li>
+                <li><a href="">Sair</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+        
       </div>
     </div>  
   </nav>
-	
-
-  <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
