--- a/index.html
+++ b/index.html
@@ -53,6 +53,32 @@
       </div>
     </div>  
   </nav>
+
+  <div class="container">
+    <ol class="breadcrumb">
+      <li><a href="">Inicío</a></li>
+      <li><a href="">Orden de Serviço</a></li>
+      <li><a href="" class="active">Pesquisa</a></li>
+    </ol>
+
+    <div class="row cabecalho">
+      <div class="col-xs-12 col-md-6">
+        <h1>Ordens de serviço</h1>
+      </div>
+
+      <div class="col-xs-12 col-md-4 col-md-offset-2 busca">
+        <div class="input-group">
+          <input type="text" name="busca" class="form-control" placeholder="Pesquisar por nome do cliente">
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default">
+              <span class="glyphicon glyphicon-search"></span>
+            </button>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
