Criando uma tabela responsiva

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <ol class="breadcrumb">
       <li><a href="">Inicío</a></li>
       <li><a href="">Orden de Serviço</a></li>
-      <li><a href="" class="active">Pesquisa</a></li>
+      <li class="active">Pesquisa</li>
     </ol>
 
     <div class="row cabecalho">
@@ -77,9 +77,92 @@
         </div>
       </div>
     </div>
+    <div class="table-responsive">
+      <table class="dados-os table table-striped table-bordered table-hover">
+        <thead>
+          <tr>
+            <td>Cod.</td>
+            <td>Data</td>
+            <td>Cliente</td>
+            <td>Valor</td>
+            <td>Funcionário</td>
+            <td>Status</td>
+            <td></td>
+          </tr>
+        </thead>
+        <tbody>
+              <tr>
+                <td>51351</td>
+                <td>05/05/2015</td>
+                <td>Gandalf Cinzento</td>
+                <td>800,00</td>
+                <td>Jorge</td>
+                <td><span class="label label-primary">Em Andamento</span></td>
+                <td class="text-center">
+                  <a href=""><span class="glyphicon glyphicon-ok text-success"></span></a>
+                  <a href=""><span class="glyphicon glyphicon-pencil text-warning"></span></a>
+                  <a href=""><span class="glyphicon glyphicon-trash text-danger"></span></a>
+                </td>
+              </tr>
+              <tr>
+                <td>51351</td>
+                <td>05/05/2015</td>
+                <td>Gandalf Cinzento</td>
+                <td>800,00</td>
+                <td>Jorge</td>
+                <td><span class="label label-default">Em Andamento</span></td>
+                <td class="text-center">
+                  <a href=""><span class="glyphicon glyphicon-ok text-success"></span></a>
+                  <a href=""><span class="glyphicon glyphicon-pencil text-warning"></span></a>
+                  <a href=""><span class="glyphicon glyphicon-trash text-danger"></span></a>
+                </td>
+              </tr>
+              <tr>
+                <td>51351</td>
+                <td>05/05/2015</td>
+                <td>Gandalf Cinzento</td>
+                <td>800,00</td>
+                <td>Jorge</td>
+                <td><span class="label label-warning">Em Andamento</span></td>
+                <td class="text-center">
+                  <a href=""><span class="glyphicon glyphicon-ok text-success"></span></a>
+                  <a href=""><span class="glyphicon glyphicon-pencil text-warning"></span></a>
+                  <a href=""><span class="glyphicon glyphicon-trash text-danger"></span></a>
+                </td>
+              </tr>
+              <tr>
+                <td>51351</td>
+                <td>05/05/2015</td>
+                <td>Gandalf Cinzento</td>
+                <td>800,00</td>
+                <td>Jorge</td>
+                <td><span class="label label-danger">Em Andamento</span></td>
+                <td class="text-center">
+                  <a href=""><span class="glyphicon glyphicon-ok text-success"></span></a>
+                  <a href=""><span class="glyphicon glyphicon-pencil text-warning"></span></a>
+                  <a href=""><span class="glyphicon glyphicon-trash text-danger"></span></a>
+                </td>
+              </tr>
+              <tr>
+                <td>51351</td>
+                <td>05/05/2015</td>
+                <td>Gandalf Cinzento</td>
+                <td>800,00</td>
+                <td>Jorge</td>
+                <td><span class="label label-success">Em Andamento</span></td>
+                <td class="text-center">
+                  <a href=""><span class="glyphicon glyphicon-ok text-success"></span></a>
+                  <a href=""><span class="glyphicon glyphicon-pencil text-warning"></span></a>
+                  <a href=""><span class="glyphicon glyphicon-trash text-danger"></span></a>
+                </td>
+              </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 
   <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
