--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                 <td>Jorge</td>
                 <td><span class="label label-primary">Em Andamento</span></td>
                 <td class="text-center">
-                  <a href=""><span class="glyphicon glyphicon-ok text-success"></span></a>
-                  <a href=""><span class="glyphicon glyphicon-pencil text-warning"></span></a>
-                  <a href=""><span class="glyphicon glyphicon-trash text-danger"></span></a>
+                  <a href="" data-toggle="tooltip" title="Finalizar"><span class="glyphicon glyphicon-ok text-success"></span></a>
+                  <a href="" data-toggle="tooltip" title="Editar"><span class="glyphicon glyphicon-pencil text-warning"></span></a>
+                  <a href="" data-toggle="tooltip" title="Excluir"><span class="glyphicon glyphicon-trash text-danger"></span></a>
                 </td>
               </tr>
               <tr>
