--- a/index.html
+++ b/index.html
@@ -159,6 +159,46 @@
         </tbody>
       </table>
     </div>
+
+    <form class="row">
+      <div class="col-sm-6">
+        <button class="btn btn-primary"> Nova Orden de Serviço</button>
+      </div>
+      <div class="col-sm-6 paginacao text-right">
+        <ul class="pagination">
+          <li class="disabled">
+            <a href="">
+              <span><<</span>
+            </a>
+          </li>
+            <li class="active">
+            <a href="">
+              <span>1</span>
+            </a>
+          </li>
+            <li>
+            <a href="">
+              <span>2</span>
+            </a>
+          </li>
+            <li>
+            <a href="">
+              <span>3</span>
+            </a>
+          </li>
+            <li>
+            <a href="">
+              <span>4</span>
+            </a>
+              <li>
+            <a href="">
+              <span>>></span>
+            </a>
+          </li>
+          </li>
+        </ul>
+      </div>
+    </form>
   </div>
 
   <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
