--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
       </table>
     </div>
 
-    <form class="row">
+    <footer class="row">
       <div class="col-sm-6">
-        <button class="btn btn-primary"> Nova Orden de Serviço</button>
+        <button class="btn btn-primary" data-toggle="modal" data-target="#NovaOS"> Nova Orden de Serviço</button>
       </div>
       <div class="col-sm-6 paginacao text-right">
         <ul class="pagination">
@@ -198,8 +198,27 @@
           </li>
         </ul>
       </div>
-    </form>
+    </footer>
   </div>
+
+  <div class="modal fade" id="NovaOS">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Nova Ordem de Serviço</h4>
+        </div>
+        <form>
+          <div class="modal-body">
+            
+          </div>
+          <div class="modal-footer">
+            <button type="reset" class="btn btn-danger">Limpar</button>
+            <button type="submit" class="btn btn-primary">Salvar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>  
 
   <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
