Alertas com boostrap

--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
         </div>
         <form>
             <div class="modal-body">
+            <div class="alert alert-warning">
+              <button type="button" data-dismiss="alert" class="close">
+                <span>&times;</span>
+              </button>
+              <b>Ocorreu um erro!</b>
+            </div>
               <div class="row">
                 <div class="form-group col-xs-12">
                   <label>Código da OS</label>
